--- a/client/src/index.css
+++ b/client/src/index.css
@@ -46,11 +46,11 @@ textarea {
 }
 
 .btn-secondary {
-  background-color: #7430f9;
+  background-color: #000000;
 }
 
 .btn-secondary:hover {
-  background-color: #7430f9;
+  background-color: #b6b000;
   opacity: 0.9;
 }
 
